--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
     "react-scripts": "3.0.1",
-    "reactstrap": "8.0.0"
+    "reactstrap": "8.0.0",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
